--- a/index.html
+++ b/index.html
@@ -123,15 +123,20 @@
                 </div>
             </div>
         </section>
-        <!-- Courses We Offer -->
+     <!-- Courses We Offer -->
         <section class="sec2">
             <div class="our_courses">
                 <div class="top">
                     <h4>LEARN FULL-STACK WEB DEVELOPMENT</h4>
                     <h1 style="padding-left: 70px;padding-top: 30px;">OUR COURSES</h1>
                 </div>
-                <div>Ideal For first-time coders</div>
+                <!-- <div>Ideal For first-time coders</div> -->
+
                 <div class="bottom">
+                    <div style="margin-top: 40px;"><img src="beginner.jpeg" alt=""></div>
+                    <div style="margin-left: 20px;margin-top: 53px;"><img src="intermediate.jpeg" alt=""></div>
+                </div>
+                <!-- <div class="bottom">
                     <div class="beginner course_structure">
                         
                         <div class="sap">
@@ -206,7 +211,7 @@
                                 <img src="#" alt="Learn-more">
                             </button>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
